jmeter jmx file, README.md added
